Fix database column issue: remove title_world from coalescedTitle
- Remove title_world from coalescedTitle query as column doesn't exist in database
- This fixes the 'no such column: public.games.title_world' error
- Theme browser should now work locally
- All 414 tests still passing

--- a/docs/session-2025-08-20.md
+++ b/docs/session-2025-08-20.md
@@ -124,8 +124,8 @@ _None yet_
 
 **Phase 1:** ✅ **COMPLETED** - Database & Store Foundation  
 **Phase 2:** ✅ **COMPLETED** - Core Components  
-**Phase 3:** 📅 **Ready to Start** - Store Integration & Data Flow  
-**Phase 4:** 📅 Planned - Detail Views & Privacy  
+**Phase 3:** ✅ **COMPLETED** - Store Integration & Data Flow  
+**Phase 4:** 📅 **Ready to Start** - Detail Views & Privacy  
 **Phase 5:** 📅 Planned - Filtering & Polish
 
-**Overall Progress:** 50% complete (Foundation and components done, ready for store integration)
+**Overall Progress:** 75% complete (Foundation, components, and store integration done, ready for detail views)
